<resources>
    <string name="app_name">ChatApp</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="you_haven_t_an_account_yet">You haven\'t an account yet?</string>
    <string name="register_now">Register now</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="email">Email</string>
    <string name="login_loading">Login…</string>
    <string name="notice">Notice!</string>
    <string name="ok">OK</string>
    <string name="empty" />
    <string name="login_with_google_is_not_available">Login with Google is not available now!</string>
    <string name="login_with_facebook_is_not_available">Login with Facebook is not available now!</string>
    <string name="username_example">hieuminh22690@gmail.com</string>
    <string name="password_example">12345678</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="chat_app">ChatApp</string>
    <string name="chat_view_tab">Chat</string>
    <string name="setting_view_tab">Setting</string>
    <string name="add_chat">Add Chat</string>
    <string name="result">Result:</string>
    <string name="name">Name:</string>
    <string name="enter_an_email_to_add_chat">Enter an email to add chat</string>
    <string name="request_connect">Request connect</string>
    <string name="user_is_not_exist">User is not exist!</string>
    <string name="you">You: </string>
    <string name="blank">: </string>
    <string name="message">Message...</string>
    <string name="have_occured_error_with_this_item">have occured error with this item</string>
    <string name="connect_success">Connect success!</string>
    <string name="texting_youself_is_not_available">You cannot message yourself now, please try again later!</string>
    <string name="this_user_is_connected_before">This user is connected before!</string>
    <string name="receive_notification">Receive notification</string>
    <string name="notification">Notification</string>
</resources>
