<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_150"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_100"
        android:background="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dp_121"
        android:layout_height="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_44"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_chat_24"
        tools:ignore="ContentDescription,VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/dp_216"
        android:layout_height="@dimen/dp_51"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginTop="52dp"
        android:text="@string/already_have_an_account"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_16"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_email"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="@dimen/dp_16"
        android:hint="@string/email"
        android:inputType="text"
        android:padding="@dimen/dp_16"
        android:text="hieuminh22690@gmail.com"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_50"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_32"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_lock"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="@dimen/dp_16"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/dp_16"
        android:text="12345678"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_32"
        android:background="@drawable/round_bg"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_32"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogin" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_32"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="@dimen/dp_313"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_4"
            android:layout_marginRight="@dimen/dp_4"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/you_haven_t_an_account_yet"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tvSwitchToRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.8"
            android:text="@string/register_now"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_32"
        android:text="@string/or"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/btLoginWithGoogle"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_32"
        android:background="@drawable/round_border_google"
        android:drawableStart="@drawable/ic_google"
        android:drawableLeft="@drawable/ic_google"
        android:drawingCacheQuality="auto"
        android:padding="@dimen/dp_16"
        android:text="@string/login_with_google"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/btLoginWithFacebook"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_32"
        android:background="@drawable/round_border_facebook"
        android:drawableStart="@drawable/ic_facebook"
        android:drawableLeft="@drawable/ic_facebook"
        android:padding="@dimen/dp_16"
        android:text="@string/login_with_facebook"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLoginWithGoogle" />

</androidx.constraintlayout.widget.ConstraintLayout>
